základ okna pro výběr pokynů - tabbed activity

--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -2,11 +2,18 @@
 <resources>
     <string name="app_name">OzoDraw</string>
     <string name="menu_color">Barva</string>
-    <string name="mennu_erase">Guma</string>
+    <string name="menu_erase">Guma</string>
     <string name="menu_new">Smazat vše</string>
     <string name="menu_save">Uložit</string>
     <string name="menu_color_black">Černá</string>
     <string name="menu_color_blue">Modrá</string>
     <string name="menu_color_green">Zelená</string>
     <string name="menu_color_red">Červená</string>
+    <string name="menu_direction">Pokyny</string>
+
+    <string name="title_activity_directions">Pokyny</string>
+    <string name="title_speed">Rychlost</string>
+    <string name="title_direction">Směr</string>
+    <string name="title_moves">Pohyby</string>
+
 </resources>
