--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,18 @@
 <resources>
     <string name="app_name">OzoDraw</string>
+
     <string name="menu_color">Color</string>
-    <string name="mennu_erase">Rubber</string>
+    <string name="menu_erase">Rubber</string>
     <string name="menu_new">Clear</string>
     <string name="menu_save">Save</string>
     <string name="menu_color_black">Black</string>
     <string name="menu_color_blue">Blue</string>
     <string name="menu_color_green">Green</string>
     <string name="menu_color_red">Red</string>
+    <string name="menu_direction">Directions</string>
+
+    <string name="title_activity_directions">Directions</string>
+    <string name="title_speed">Speed</string>
+    <string name="title_direction">Direction</string>
+    <string name="title_moves">Moves</string>
 </resources>
