--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -9,9 +9,9 @@
     <string name="menu_color_blue">Modrá</string>
     <string name="menu_color_green">Zelená</string>
     <string name="menu_color_red">Červená</string>
-    <string name="menu_direction">Pokyny</string>
+    <string name="menu_command">Pokyny</string>
 
-    <string name="title_activity_directions">Pokyny</string>
+    <string name="title_activity_commands">Pokyny</string>
     <string name="title_speed">Rychlost</string>
     <string name="title_direction">Směr</string>
     <string name="title_moves">Pohyby</string>
