--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,6 @@
     <string name="command_direction_jump_straight">Jump straight</string>
     <string name="command_direction_jump_right">Jump right</string>
     <string name="command_direction_jump_left">Jump left</string>
+    <string name="menu_stroke_width">Stroke width</string>
+    <string name="stroke_width_dialog_title">Set stroke width</string>
 </resources>
